<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">TableLayoutSample</string>
    <string name="tv_title1">やりたいスポーツ</string>
    <string name="tv_title2">順位</string>
    <string name="tv_ski">スキー</string>
    <string name="tv_snowboard">スノーボード</string>
    <string name="tv_golf">ゴルフ</string>
    <string name="tv_swimming">水泳</string>
    <string name="tv_dot">・・・・・・・・</string>


</resources>
